<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:contentDescription="@string/signin_image"
        android:src="@drawable/log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_30sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/enter_email"
            android:textColor="@color/signup_text_color"
            android:textSize="@dimen/_17sdp" />

        <EditText
            android:id="@+id/LoginEmailId"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:autofillHints="false"
            android:background="@drawable/custom_input_style"
            android:hint="assignment@gmail.com"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_5sdp"
            android:paddingStart="@dimen/_20sdp"

            android:paddingEnd="@dimen/_20sdp"
            android:paddingBottom="@dimen/_5sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/password"
            android:textColor="@color/signup_text_color"
            android:textSize="@dimen/_17sdp" />

        <EditText
            android:id="@+id/LoginPasswordId"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:autofillHints="false"
            android:background="@drawable/custom_input_style"
            android:hint="*********"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_20sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:paddingBottom="@dimen/_5sdp" />


        <TextView
            android:id="@+id/logInforgotPasswordId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="@string/forgot_password"
            android:textSize="@dimen/_15sdp" />


        <androidx.cardview.widget.CardView
            android:id="@+id/LoginRegisterBtnId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="@dimen/_15sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/call_btn_shape">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/_20sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_20sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/loginBtn"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/LoginCreateNewAccountId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/create_a_new_account"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="OR"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/LoginWithPhoneNumberId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="Login with phone Number"
            android:textSize="@dimen/_15sdp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>