<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:scaleType="fitCenter"
        android:src="@drawable/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_30sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/enter_email"
            android:textColor="@color/signup_text_color"
            android:textSize="@dimen/_17sdp" />

        <EditText
            android:id="@+id/signUpEmailId"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:autofillHints="false"
            android:background="@drawable/custom_input_style"
            android:hint="assignment@gmail.com"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_5sdp"
            android:paddingStart="@dimen/_20sdp"

            android:paddingEnd="@dimen/_20sdp"
            android:paddingBottom="@dimen/_5sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/password"
            android:textColor="@color/signup_text_color"
            android:textSize="@dimen/_17sdp" />

        <EditText
            android:id="@+id/signUpPasswordId"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:autofillHints="false"
            android:background="@drawable/custom_input_style"
            android:hint="*********"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_20sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:paddingBottom="@dimen/_5sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/renter_password"
            android:textColor="@color/signup_text_color"
            android:textSize="@dimen/_17sdp" />

        <EditText
            android:id="@+id/renterPasswordId"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/custom_input_style"
            android:hint="**********"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_20sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:paddingBottom="@dimen/_5sdp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/signUpRegisterBtnId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="@dimen/_15sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/call_btn_shape">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/_20sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_20sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/or"
            android:textSize="@dimen/_20sdp" />

        <LinearLayout
            android:id="@+id/signupCallLoginId"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/call_btn_shape"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                android:contentDescription="TODO"
                android:src="@drawable/telephone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_20sdp"
                android:text="@string/signup_with_phone_number"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>